Done Get Request

--- a/TestAPBD/appsettings.json
+++ b/TestAPBD/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=name;User Id=SA;Password=es-Three-One!;Encrypt=False;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=RaceDB;User Id=SA;Password=es-Three-One!;Encrypt=False;TrustServerCertificate=True"
   }
 }
